# Kydras-eBook-Studio

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  SECURITY.md  gui.sh  install.sh  pyproject.toml  requirements.txt  validate_key.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
kydras_ebook_studio/: manager.py
license/: unlock.txt  valid_keys.txt
packaging/appimage/: AppRun  build-appimage.sh  kydras-ebook-studio.desktop
src/kydras_ebook/: __init__.py
webui/: license_server.py  terminal-server.py
